Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118870

Icon of a cell with a background color disappears if a stylesheet is used for QTreeView::indicator

XMLWordPrintable

    • 304eca394 (dev), 9be581537 (6.6), 531cdffc5 (tqtc/lts-6.5)

      To reproduce run attached example.

      There should be icon on both columns, but only the second one is shown. Both are shown correctly if the line that sets the stylesheet is commented out.

        1. qtbug118870.tar.gz
          0.8 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            matthias_rauter Matthias Rauter
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes